src/objects/rule__c.object
<CustomObject>
    <description>this is the description</description>
    <fields>
        <fullName>ACCD_Business_Id_Number__c</fullName>
        <externalId>true</externalId>
        <label>ACCD Business Id Number</label>
        <description>this is the description</description>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCD_Business_Id__c</fullName>
        <formula>TEXT(ACCD_Business_Id_Number__c)</formula>
        <label>ACCD Business Id</label>
        <description>this is the description</description>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCD_DED_COMM_Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TechM</description>
        <label>Welcome Email Sent?</label>
        <description>this is the description</description>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCD_SOS_Import_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOS Import Lead</label>
        
        <description>this is the description</description>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number_Validation__c</fullName>
        <label>Account Number Validation (Arrears)</label>
        <description>this is the description</description>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Id__c</fullName>
        <description>Formula field to be used in validation rules and lookup filter where Id is not directly accessible.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerators</fullName>
                </value>
                <value>
                    <fullName>Chamber of Commerce</fullName>
                </value>
                <value>
                    <fullName>Client Businesses</fullName>
                </value>
                <value>
                    <fullName>Co-working Spaces</fullName>
                </value>
                <value>
                    <fullName>Maker Spaces</fullName>
                </value>
                <value>
                    <fullName>Meet Up</fullName>
                </value>
                <value>
                    <fullName>Municipalities</fullName>
                </value>
                <value>
                    <fullName>RDC</fullName>
                </value>
                <value>
                    <fullName>Recruitment Prospect</fullName>
                </value>
                <value>
                    <fullName>RPC</fullName>
                </value>
                <value>
                    <fullName>100000000: Client Businesses</fullName>
                    <isActive>false</isActive>
                    <label>100000000: Client Businesses</label>
                </value>
                <value>
                    <fullName>100000001: Recruitment Prospects</fullName>
                    <isActive>false</isActive>
                    <label>100000001: Recruitment Prospects</label>
                </value>
                <value>
                    <fullName>100000002: Partner Organizations</fullName>
                    <isActive>false</isActive>
                    <label>100000002: Partner Organizations</label>
                </value>
                <value>
                    <fullName>100000003: Municipalities</fullName>
                    <isActive>false</isActive>
                    <label>100000003: Municipalities</label>
                </value>
                <value>
                    <fullName>100000004: Contractor</fullName>
                    <isActive>false</isActive>
                    <label>100000004: Contractor</label>
                </value>
                <value>
                    <fullName>100000005: Economic Development Organization</fullName>
                    <isActive>false</isActive>
                    <label>100000005: Economic Development Organization</label>
                </value>
                <value>
                    <fullName>100000006: Law Firm</fullName>
                    <isActive>false</isActive>
                    <label>100000006: Law Firm</label>
                </value>
                <value>
                    <fullName>100000007: Accounting Firm</fullName>
                    <isActive>false</isActive>
                    <label>100000007: Accounting Firm</label>
                </value>
                <value>
                    <fullName>100000008: Venture Capital</fullName>
                    <isActive>false</isActive>
                    <label>100000008: Venture Capital</label>
                </value>
                <value>
                    <fullName>100000009: Co-Working Spaces</fullName>
                    <isActive>false</isActive>
                    <label>100000009: Co-Working Spaces</label>
                </value>
                <value>
                    <fullName>100000010: Maker Spaces</fullName>
                    <isActive>false</isActive>
                    <label>100000010: Maker Spaces</label>
                </value>
                <value>
                    <fullName>100000011: Higher-Ed</fullName>
                    <isActive>false</isActive>
                    <label>100000011: Higher-Ed</label>
                </value>
                <value>
                    <fullName>100000012: Capital Sourcing</fullName>
                    <isActive>false</isActive>
                    <label>100000012: Capital Sourcing</label>
                </value>
                <value>
                    <fullName>100000014: Incubators</fullName>
                    <isActive>false</isActive>
                    <label>100000014: Incubators</label>
                </value>
                <value>
                    <fullName>100000015: Entrepreneur/Business Support</fullName>
                    <isActive>false</isActive>
                    <label>100000015: Entrepreneur/Business Support</label>
                </value>
                <value>
                    <fullName>100000016: Meetups</fullName>
                    <isActive>false</isActive>
                    <label>100000016: Meetups</label>
                </value>
                <value>
                    <fullName>100000017: RDC</fullName>
                    <isActive>false</isActive>
                    <label>100000017: RDC</label>
                </value>
                <value>
                    <fullName>100000018: RPC</fullName>
                    <isActive>false</isActive>
                    <label>100000018: RPC</label>
                </value>
                <value>
                    <fullName>100000019: Chamber of Commerce - Vermont</fullName>
                    <isActive>false</isActive>
                    <label>100000019: Chamber of Commerce - Vermont</label>
                </value>
                <value>
                    <fullName>100000020: Foreign Direct Investment (FDI)</fullName>
                    <isActive>false</isActive>
                    <label>100000020: Foreign Direct Investment (FDI)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Sequence_Number__c</fullName>
        <label>Address Sequence Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_2019__c</fullName>
        <label>Annual Revenue 2019</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Frequency__c</fullName>
        <label>Appointment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_End_Time__c</fullName>
        <label>Business End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_ID_Number__c</fullName>
        <label>Business ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name__c</fullName>
        <label>Business Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <label>Business Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Start_Time__c</fullName>
        <label>Business Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Inactive - Terminated</fullName>
                </value>
                <value>
                    <fullName>Inactive-Canceled</fullName>
                </value>
                <value>
                    <fullName>Inactive - Dissolved</fullName>
                </value>
                <value>
                    <fullName>Inactive - Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Expiration Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Agent Resignation</fullName>
                </value>
                <value>
                    <fullName>Inactive - Merged</fullName>
                </value>
                <value>
                    <fullName>Inactive - Domesticated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <isActive>false</isActive>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                    <isActive>false</isActive>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>Dissolved</fullName>
                    <isActive>false</isActive>
                    <label>Dissolved</label>
                </value>
                <value>
                    <fullName>Domesticated</fullName>
                    <isActive>false</isActive>
                    <label>Domesticated</label>
                </value>
                <value>
                    <fullName>Hold</fullName>
                    <isActive>false</isActive>
                    <label>Hold</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Merged</fullName>
                    <isActive>false</isActive>
                    <label>Merged</label>
                </value>
                <value>
                    <fullName>Pending Dissolution</fullName>
                    <isActive>false</isActive>
                    <label>Pending Dissolution</label>
                </value>
                <value>
                    <fullName>Redomesticated</fullName>
                    <isActive>false</isActive>
                    <label>Redomesticated</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Sub_Type_Multiselect__c</fullName>
        <label>Business Sub Type Multiselect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Corporation</fullName>
                </value>
                <value>
                    <fullName>Close Corporation</fullName>
                </value>
                <value>
                    <fullName>Benefit Corporation</fullName>
                </value>
                <value>
                    <fullName>General Cooperative</fullName>
                </value>
                <value>
                    <fullName>Worker Cooperative</fullName>
                </value>
                <value>
                    <fullName>Cooperative Housing Corporations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Sub_Type__c</fullName>
        <label>Business Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Benefit Corporation</fullName>
                </value>
                <value>
                    <fullName>Benefit Professional</fullName>
                </value>
                <value>
                    <fullName>Benefit Professional Corporation</fullName>
                    <isActive>false</isActive>
                    <label>Benefit Professional Corporation</label>
                </value>
                <value>
                    <fullName>Blockchain Based LLC</fullName>
                </value>
                <value>
                    <fullName>Close Benefit</fullName>
                </value>
                <value>
                    <fullName>Close Benefit Corporation</fullName>
                    <isActive>false</isActive>
                    <label>Close Benefit Corporation</label>
                </value>
                <value>
                    <fullName>Close Benefit Professional</fullName>
                </value>
                <value>
                    <fullName>Close Corporation</fullName>
                </value>
                <value>
                    <fullName>Close Professional</fullName>
                </value>
                <value>
                    <fullName>Close Professional Corporation</fullName>
                    <isActive>false</isActive>
                    <label>Close Professional Corporation</label>
                </value>
                <value>
                    <fullName>Consumers&apos; Cooperative</fullName>
                </value>
                <value>
                    <fullName>Cooperative Housing Corporations</fullName>
                </value>
                <value>
                    <fullName>Energy Cooperative</fullName>
                </value>
                <value>
                    <fullName>General Cooperative</fullName>
                </value>
                <value>
                    <fullName>General Corporation</fullName>
                </value>
                <value>
                    <fullName>General Professional Corporation</fullName>
                    <isActive>false</isActive>
                    <label>General Professional Corporation</label>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Low-Profit LLC (L3C)</fullName>
                </value>
                <value>
                    <fullName>Marketing Cooperative</fullName>
                </value>
                <value>
                    <fullName>Professional Benefit</fullName>
                </value>
                <value>
                    <fullName>Professional Corporation</fullName>
                </value>
                <value>
                    <fullName>Professional LLC (PLC)</fullName>
                </value>
                <value>
                    <fullName>Railroad Cooperative</fullName>
                </value>
                <value>
                    <fullName>Worker Cooperative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Subtype_2_Multiselect__c</fullName>
        <label>Business Subtype 2 Multiselect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Cooperative</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative</fullName>
                </value>
                <value>
                    <fullName>Cooperative Professional</fullName>
                </value>
                <value>
                    <fullName>Cooperative Benefit</fullName>
                </value>
                <value>
                    <fullName>Cooperative Benefit Professional</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Professional</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Benefit</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Benefit Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Subtype_2__c</fullName>
        <label>Business Subtype 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Cooperative</fullName>
                </value>
                <value>
                    <fullName>Cooperative Professional</fullName>
                </value>
                <value>
                    <fullName>Cooperative Benefit</fullName>
                </value>
                <value>
                    <fullName>Cooperative Benefit Professional</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Benefit</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Professional</fullName>
                </value>
                <value>
                    <fullName>Close Cooperative Benefit Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Terminated_Date__c</fullName>
        <label>Business Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Profit Corporation</fullName>
                </value>
                <value>
                    <fullName>Cooperative Corporation</fullName>
                </value>
                <value>
                    <fullName>Mutual Benefit Enterprise</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>Name Registration</fullName>
                </value>
                <value>
                    <fullName>Business Corporation</fullName>
                </value>
                <value>
                    <fullName>Assumed Business Name</fullName>
                </value>
                <value>
                    <fullName>Nonprofit Corporation</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OSDH Antibody</fullName>
                </value>
                <value>
                    <fullName>COVID Results</fullName>
                </value>
                <value>
                    <fullName>OKU COVID</fullName>
                </value>
                <value>
                    <fullName>Vital Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Cont__c</fullName>
        <formula>If(LEN(DBA_Helper__c)&gt;40,Right(DBA_Helper__c ,LEN(DBA_Helper__c)- DBA_Last_Space__c ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA (Cont.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Helper__c</fullName>
        <formula>Doing_Business_As__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Last_Space__c</fullName>
        <formula>CASE( LEN(DBA_Helper__c) - LEN(SUBSTITUTE(DBA_Helper__c,&apos; &apos;, &apos;&apos;)),
1, FIND(&quot; &quot;, DBA_Helper__c),
2, if(FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1) &gt; 40,FIND(&quot; &quot;, DBA_Helper__c),FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)),
3, if(FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1) &gt; 40,FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1),FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)) ,
4, if(FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)&gt;40,FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1),FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)),
5, if(FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)+1)&gt;40,FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1),FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)+1)),
6, if(FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)+1)+1)&gt;40,FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)+1),FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c, FIND(&quot; &quot;, DBA_Helper__c)+1)+1)+1)+1)+1)),
40
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Last Space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA_Report__c</fullName>
        <formula>If(LEN(DBA_Helper__c)&gt;40,MID( DBA_Helper__c ,0, DBA_Last_Space__c),DBA_Helper__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA (Report)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DED_Industry__c</fullName>
        <label>DED Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100000000: Advanced Manufacturing</fullName>
                    <label>Advanced Manufacturing</label>
                </value>
                <value>
                    <fullName>100000010: Agriculture/Forest</fullName>
                    <label>Agriculture/Forest</label>
                </value>
                <value>
                    <fullName>100000006: Art &amp; Culture</fullName>
                    <label>Art &amp; Culture</label>
                </value>
                <value>
                    <fullName>100000011: Biotechnology</fullName>
                    <label>Biotechnology</label>
                </value>
                <value>
                    <fullName>100000024: Brewery</fullName>
                    <label>Brewery</label>
                </value>
                <value>
                    <fullName>100000026: Cidery</fullName>
                    <label>Cidery</label>
                </value>
                <value>
                    <fullName>100000015: Construction</fullName>
                    <label>Construction</label>
                </value>
                <value>
                    <fullName>100000022: Consumer Retail</fullName>
                    <label>Consumer Retail</label>
                </value>
                <value>
                    <fullName>100000027: Distillery</fullName>
                    <label>Distillery</label>
                </value>
                <value>
                    <fullName>100000001: Education</fullName>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>100000020: Energy</fullName>
                    <label>Energy</label>
                </value>
                <value>
                    <fullName>100000003: Financial/Professional Services</fullName>
                    <label>Financial/Professional Services</label>
                </value>
                <value>
                    <fullName>100000005: Food &amp; Beverage</fullName>
                    <label>Food &amp; Beverage</label>
                </value>
                <value>
                    <fullName>100000009: Health &amp; Beauty</fullName>
                    <label>Health &amp; Beauty</label>
                </value>
                <value>
                    <fullName>100000002: Healthcare</fullName>
                    <label>Healthcare</label>
                </value>
                <value>
                    <fullName>100000012: Insurance</fullName>
                    <label>Insurance</label>
                </value>
                <value>
                    <fullName>100000013: Lodging/Resorts</fullName>
                    <label>Lodging/Resorts</label>
                </value>
                <value>
                    <fullName>100000017: Media</fullName>
                    <label>Media</label>
                </value>
                <value>
                    <fullName>100000007: Mining</fullName>
                    <label>Mining</label>
                </value>
                <value>
                    <fullName>100000021: Real Estate</fullName>
                    <label>Real Estate</label>
                </value>
                <value>
                    <fullName>100000016: Renewable Energy/Green Business</fullName>
                    <label>Renewable Energy/Green Business</label>
                </value>
                <value>
                    <fullName>100000004: Software/IT</fullName>
                    <label>Software/IT</label>
                </value>
                <value>
                    <fullName>100000023: Solid Waste and Refuse Systems</fullName>
                    <label>Solid Waste and Refuse Systems</label>
                </value>
                <value>
                    <fullName>100000008: Tourism/Outdoor Recreation</fullName>
                    <label>Tourism/Outdoor Recreation</label>
                </value>
                <value>
                    <fullName>100000019: Transportation</fullName>
                    <label>Transportation</label>
                </value>
                <value>
                    <fullName>100000018: Utilities</fullName>
                    <label>Utilities</label>
                </value>
                <value>
                    <fullName>100000025: Winery</fullName>
                    <label>Winery</label>
                </value>
                <value>
                    <fullName>100000014: Wood Products</fullName>
                    <label>Wood Products</label>
                </value>
                <value>
                    <fullName>Advanced Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>Advanced Manufacturing</label>
                </value>
                <value>
                    <fullName>Agriculture/Forest</fullName>
                    <isActive>false</isActive>
                    <label>Agriculture/Forest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DFR_CO_GM_Q1_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DFR_CO_GM_Q2_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2 amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DFR_CO_GM_Q3_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3 amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DFR_CO_GM_Total_amount_for_all_quarter__c</fullName>
        <formula>DFR_CO_GM_Q1_amount__c  +  DFR_CO_GM_Q2_amount__c  +  DFR_CO_GM_Q3_amount__c  +  DFR_CO_GM_Q4_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amount for all quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <label>Directions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disable_automatic_tier_assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable automatic tier assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dissolved_Date__c</fullName>
        <label>Dissolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As_2__c</fullName>
        <label>Doing Business As 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Filing__c</fullName>
        <label>Effective Date of Filing</label>
        <type>Date</type>
    </fields>
</CustomObject>